nova_tests/plan124/neg/plan124_8_binding_mut_mut_redundant_neg.nv
// EXPECT_COMPILE_ERROR E_REDUNDANT_TYPE_MODIFIER
//
// Plan 124.8 — negative: `mut x mut T` — redundant.
module neg.plan124_8_binding_mut_mut_redundant_neg

fn main() {
    mut arr []int = [1, 2, 3]
    mut view mut []int = arr
}
